--- a/src/App.css
+++ b/src/App.css
@@ -38,15 +38,35 @@
 }
 
 input {
-  margin: 20px 0 50px 0;
+  margin: 20px 0 20px 0;
+}
+
+h6 {
+  margin: 0;
 }
 
 p {
   margin: 0;
+  max-height: 10px;
 }
 
 span {
   font-size: 10px;
   width: 20px;
   margin-right: 2%;
+  margin-bottom: none;
+}
+
+.calendar-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.calendar-container * {
+  margin: 0 auto;
+  width: 53vw;
+}
+
+.year-row {
+  display: flex;
 }
